--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,8 @@
     "rules": {
         "import/prefer-default-export": "off",
         "max-len": ["error", { "code": 120 }],
-        "tsdoc/syntax": "warn"
+        "tsdoc/syntax": "warn",
+        "import/extensions": "off",
+        "no-bitwise": "off"
     }
 }
